created fir html page with content and started styling with CSS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <nav id="nav-bar">
+    <a href="">View High Score</a>
+    <div id="countdown">Time: </div>
+  </nav>
+
+  <main>
+    <!-- quiz start page -->
+    <div id="title" >
+      <h1>Coding Quiz Challenge</h1>
+    </div>
+    <div id="instructions" >
+      <p>Try to answer the following code-related questions withing the time limit. Keep in mind that the incorrect answers will penalise your score/time by 10 seconds!</p>
+    </div>
+    <div id="start-button">
+      <button class="button" >Start Quiz</button>
+    </div>
+  </main>
 </body>
 </html>
