added html template for elements

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <a href="">View High Score</a>
     <div id="countdown">Time: </div>
   </nav>
-
-  <main>
-    <!-- quiz start page -->
+ <!-- pre-quiz-->
+  <section>
     <div id="title" >
       <h1>Coding Quiz Challenge</h1>
     </div>
@@ -25,6 +24,18 @@
     <div id="start-button">
       <button class="button" >Start Quiz</button>
     </div>
-  </main>
+  </section>
+   <!-- Quiz with questions -->
+  <section>
+    <div id="question-component" class="hidden">
+      <h1 id="question-text" ></h1>
+      <ul id="answer-list" >
+        <li id="question-1" ></li>
+        <li id="question-2" ></li>
+        <li id="question-3" ></li>
+        <li id="question-4" ></li>
+      </ul>
+    </div>
+  </section>
 </body>
 </html>
