added event listener and and began function for starting the quiz

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="countdown">Time: </div>
   </nav>
  <!-- pre-quiz-->
-  <section>
+  <section id="pre-quiz" class=>
     <div id="title" >
       <h1>Coding Quiz Challenge</h1>
     </div>
@@ -27,15 +27,19 @@
   </section>
    <!-- Quiz with questions -->
   <section>
-    <div id="question-component" class="hidden">
+    <div id="question-component" class=>
       <h1 id="question-text" ></h1>
-      <ul id="answer-list" >
-        <li id="question-1" ></li>
-        <li id="question-2" ></li>
-        <li id="question-3" ></li>
-        <li id="question-4" ></li>
-      </ul>
+      <div id="answer-wrapper" >
+        <button id="question-1" class="button" >Test</button>
+        <button id="question-2" class="button" >Test</button>
+        <button id="question-3" class="button" >Test</button>
+        <button id="question-4" class="button">Test</button>
+      </div>
+     <div>
+      <h2></h2>
+     </div>
     </div>
   </section>
+  <script src="assets/scripts/script.js"></script>
 </body>
 </html>
