added function for creating LI's

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="countdown">Time: </div>
   </nav>
  <!-- pre-quiz-->
-  <section id="pre-quiz" class=>
+  <section id="pre-quiz">
     <div id="title" >
       <h1>Coding Quiz Challenge</h1>
     </div>
@@ -27,14 +27,9 @@
   </section>
    <!-- Quiz with questions -->
   <section>
-    <div id="question-component" class=>
+    <div id="question-component" class="hidden">
       <h1 id="question-text" ></h1>
-      <div id="answer-wrapper" >
-        <button id="question-1" class="button" >Test</button>
-        <button id="question-2" class="button" >Test</button>
-        <button id="question-3" class="button" >Test</button>
-        <button id="question-4" class="button">Test</button>
-      </div>
+      <ol id="answer-list" ></ol>
      <div>
       <h2></h2>
      </div>
