added color variables and styleing to html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav id="nav-bar">
-    <a href="">View High Score</a>
+    <a class="accent-text" href="">View High Score</a>
     <div id="countdown">Time: </div>
   </nav>
  <!-- pre-quiz-->
