added button id variables

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
    <!-- Quiz with questions -->
   <section>
     <div id="question-component" class="hidden">
-      <h1 id="question-text" ></h1>
-      <ol id="answer-list" ></ol>
-     <div>
-      <h2></h2>
-     </div>
+      <div id="question-text" ></div>
+      <div id="question-button"> 
+        <button class="button"></button>
+        <button class="button"></button>
+        <button class="button"></button>
+        <button class="button"></button>
+      </div>
+      <div id="answer-response"></div>
     </div>
   </section>
   <script src="assets/scripts/script.js"></script>
