changed question variable. added template build. tested passing in data to template function

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
    <!-- Quiz with questions -->
   <section>
     <div id="question-component" class="hidden">
-      <div id="question-text" ></div>
-      <div id="question-button"> 
+      <div>
+        <h1 id="question-text"></h1>
+      </div>
+      <div id="question-buttons"> 
         <button class="button"></button>
         <button class="button"></button>
         <button class="button"></button>
