deleted template function because cant add event listeners to a template.

--- a/index.html
+++ b/index.html
@@ -22,23 +22,11 @@
       <p>Try to answer the following code-related questions withing the time limit. Keep in mind that the incorrect answers will penalise your score/time by 10 seconds!</p>
     </div>
     <div id="start-button">
-      <button class="button" >Start Quiz</button>
+      <button class="button">Start Quiz</button>
     </div>
   </section>
    <!-- Quiz with questions -->
-  <section>
-    <div id="question-component" class="hidden">
-      <div>
-        <h1 id="question-text"></h1>
-      </div>
-      <div id="question-buttons"> 
-        <button class="button"></button>
-        <button class="button"></button>
-        <button class="button"></button>
-        <button class="button"></button>
-      </div>
-      <div id="answer-response"></div>
-    </div>
+  <section id='quiz'>
   </section>
   <script src="assets/scripts/script.js"></script>
 </body>
