added section for high score page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
       </div>
       <div id="answer-response"></div>
     </div>
+    <section id="final-score">
+
+    </section>
+    <section id='high-scores'>
+      
+    </section>
   </section>
   <script src="assets/scripts/script.js"></script>
 </body>
