added event listener to track data from the user's click

--- a/index.html
+++ b/index.html
@@ -40,13 +40,18 @@
         <button id='choice-3' class='button'></button>
         <button id='choice-4' class='button'></button>
       </div>
-      <div id="answer-response"></div>
+      <div id="correct-answer" class="hide">
+        <h2>Correct!</h2>
+      </div>
+      <div id="wrong-answer" class="hide">
+        <h2>Wrong!</h2>
+      </div>
     </div>
     <section id="final-score">
-
+      <div></div>
     </section>
     <section id='high-scores'>
-      
+
     </section>
   </section>
   <script src="assets/scripts/script.js"></script>
