pre-quiz and suiz sections styled

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         answers will penalise your score/time by 10 seconds!</p>
       </div>
       <div id="start-button">
-        <button class="button">Start Quiz</button>
+        <button id="standard-button" class="button">Start Quiz</button>
       </div>
     </section>
 
    <!-- Quiz with questions -->
     <section class="container">
       <div id="quiz" class="hide">
-        <h1 id="question-text"></h1>
+        <h2 id="question-text"></h2>
         <div id="question-buttons-container">
           <div id="question-buttons">
             <button id="choice-1" class="button"></button>
@@ -50,35 +50,35 @@
     <!-- correct anser section -->
     <section class="container">
       <div id="correct-answer" class="hide">
-        <h2>Correct!</h2>
+        <h3>Correct!</h3>
       </div>
     </section>
 
     <!-- wrong answer section -->
     <section class="container">
       <div id='wrong-answer' class='hide'>
-        <h2>Wrong!</h2>
+        <h3>Wrong!</h3>
       </div>
     </section>
 
     <!-- final score section -->
     <section class="container">
       <div id="final-score" class="hide">
-        <h1>All done!</h1>
+        <h2>All done!</h2>
         <span>Your Final score is </span>
         <br>
         Enter Initials: <input type="text">
-        <button id="submit-button" class="button">Submit</button>
+        <button id="standard-button submit-button" class="button">Submit</button>
       </div>
     </section>
 
     <!-- high score section -->
     <section class="container">
       <div id='high-scores' class="hide">
-        <h1>High scores</h1>
+        <h2>High scores</h2>
         <div id="high-score-box"></div>
-        <button id="go-back-button" class="button">Go Back</button>
-        <button id="clear-high-score-button" class="button">Clear high scores</button>
+        <button id="standard-button go-back-button" class="button">Go Back</button>
+        <button id="standard-button clear-high-score-button" class="button">Clear high scores</button>
       </div>
     </section>
   </section>
