--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!-- wrong answer section -->
     <section class="container">
-      <div id='wrong-answer' class='hide'>
+      <div id="wrong-answer" class="hide">
         <h3>Wrong!</h3>
       </div>
     </section>
@@ -66,16 +66,16 @@
       <div id="final-score" class="hide">
         <h2>All done!</h2>
         <p>Your Final score is </p>
-        <form onsubmit="myFunction()">
+        <form onsubmit="showHighScores(event)">
           Enter initials: <input type="text" name="fname">
-          <input class="button" type="submit" value="Submit" >
+          <input id="submit-button" class="button" type="submit" value="Submit" >
         </form>
       </div>
     </section>
 
     <!-- high score section -->
     <section class="container">
-      <div id='high-scores' class="hide">
+      <div id="high-scores" class="hide">
         <h2>High scores</h2>
         <input type="text" id="high-score-input">
         <div id="high-score-button-container">
