--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
       </div>
     </section>
 
+    <!-- All done - final score section -->
+    <section class="container">
+      <div id="final-score" class="hid">
+        <h2>All done!</h2>
+        <p>Your Final score is </p>
+        <form onsubmit="showHighScores()">
+          Enter initials: <input type="text" name="fname">
+          <input id="submit-button" class="button" type="submit" value="Submit" >
+        </form>
+      </div>
+    </section>
+
     <!-- correct anser section -->
     <section class="container">
       <div id="correct-answer" class="hide">
@@ -60,19 +72,6 @@
         <h3>Wrong!</h3>
       </div>
     </section>
-
-    <!-- All done - final score section -->
-    <section class="container">
-      <div id="final-score" class="hide">
-        <h2>All done!</h2>
-        <p>Your Final score is </p>
-        <form onsubmit="showHighScores(event)">
-          Enter initials: <input type="text" name="fname">
-          <input id="submit-button" class="button" type="submit" value="Submit" >
-        </form>
-      </div>
-    </section>
-
     <!-- high score section -->
     <section class="container">
       <div id="high-scores" class="hide">
