fixed timer to reset after test over. fixed submit button showing the high score page

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
     <!-- All done - final score section -->
     <section class="container">
-      <div id="final-score" class="hid">
+      <div id="final-score" class="hide">
         <h2>All done!</h2>
         <p>Your Final score is </p>
-        <form onsubmit="showHighScores()">
+        <form onsubmit="">
           Enter initials: <input type="text" name="fname">
           <input id="submit-button" class="button" type="submit" value="Submit" >
         </form>
