fixed high scorepage buttons. moved elements to having one id.

--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
 
     <!-- high score section -->
     <section class="container">
-      <div id="high-scores" class="hide">
+      <div id="high-scores" class="hid">
         <h2>High scores</h2>
         <!-- <input type="text" id="high-score-input"> -->
         <ol id="score-list"></ol>
-        <div id="high-score-button-container">
-          <button id="standard-button go-back-button" class="button">Go Back</button>
-          <button id="standard-button clear-high-score-button" class="button">Clear high scores</button>
+        <div id="high-score-button-container" class="stand-button" >
+          
+          <button id="go-back" class="button">Go Back</button>
+          <button id="clear-high-score-button" class="button">Clear high scores</button>
         </div>
       </div>
     </section>
