made changes to pre quiz verbiage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <nav id="nav-bar">
-    <a id="nav-score"class="accent-text" href="">View High Score</a>
+    <a id="nav-score" class="accent-text" href="">View High Score</a>
     <div id="countdown">Time: <span id="clock"></span></div>
   </nav>
 
@@ -24,8 +24,7 @@
         <h1>Coding Quiz Challenge</h1>
       </div>
       <div id="instructions">
-        <p>Try to answer the following code-related questions withing the time limit. Keep in mind that the incorrect
-          answers will penalise your score/time by 10 seconds!</p>
+        <p>Try to answer the following code-related questions withing the time limit. Keep in mind that the incorrect answers will penalize your time by 10 seconds!</p>
       </div>
       <div id="start-button">
         <button id="standard-button" class="button">Start Quiz</button>
@@ -64,8 +63,8 @@
       <div id="high-scores" class="hide">
         <h2>High scores</h2>
         <ol id="score-list"></ol>
-        <div id="high-score-button-container" class="stand-button" >
-          
+        <div id="high-score-button-container" class="stand-button">
+
           <button id="go-back" class="button">Go Back</button>
           <button id="clear-high-score-button" class="button">Clear high scores</button>
         </div>
