fixed view high score reload. formatted files. removed redundant code

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     <a id="nav-score" class="accent-text" href="">View High Score</a>
     <div id="countdown">Time: <span id="clock"></span></div>
   </nav>
-
-
   <section id="main-container">
     <!-- pre-quiz-->
     <section id="pre-quiz" class="container">
@@ -24,13 +22,13 @@
         <h1>Coding Quiz Challenge</h1>
       </div>
       <div id="instructions">
-        <p>Try to answer the following code-related questions withing the time limit. Keep in mind that the incorrect answers will penalize your time by 10 seconds!</p>
+        <p>Try to answer the following code-related questions withing the time limit. Keep in mind that the incorrect
+          answers will penalize your time by 10 seconds!</p>
       </div>
       <div id="start-button">
         <button id="standard-button" class="button">Start Quiz</button>
       </div>
     </section>
-
     <!-- Quiz with questions -->
     <section class="container">
       <div id="quiz" class="hide">
@@ -45,7 +43,6 @@
         </div>
       </div>
     </section>
-
     <!-- All done - final score section -->
     <section class="container">
       <div id="final-score" class="hide">
@@ -57,14 +54,12 @@
         </form>
       </div>
     </section>
-
     <!-- high score section -->
     <section class="container">
       <div id="high-scores" class="hide">
         <h2>High scores</h2>
         <ol id="score-list"></ol>
         <div id="high-score-button-container" class="stand-button">
-
           <button id="go-back" class="button">Go Back</button>
           <button id="clear-high-score-button" class="button">Clear high scores</button>
         </div>
@@ -76,7 +71,6 @@
         <h3>Correct!</h3>
       </div>
     </section>
-
     <!-- wrong answer section -->
     <section class="container">
       <div id="wrong-answer" class="hide">
